# mito-data-agent

./: .env.example  .gitignore  README.md  dev-launch.sh  dev-setup.sh  dev.sh  environment.yml  pyproject.toml  requirements-cellable-ai.txt  requirements-sam2.txt  requirements.txt
backend/: pyproject.toml
backend/accounts/: admin.py  api.py  models.py  roles.py  serializers.py  signals.py  tests.py
backend/accounts/migrations/: 0001_initial.py  0002_remove_annotatorprofile_pay_rate_per_task_and_more.py
backend/agents/: admin.py  api.py  models.py  serializers.py
backend/agents/migrations/: 0001_initial.py
backend/annotation/: admin.py  api.py  label_paths.py  models.py  serializers.py  services.py  test_api_flows.py  test_cellable_port.py  test_providers.py  test_tracking.py  tests.py
backend/annotation/cellable_port/: __init__.py  label_state.py  labels_3d.py  watershed.py
backend/annotation/cellable_port/ai/: efficient_sam.py  embed_cache.py  normalize.py  registry.py
backend/annotation/management/commands/: assign_tasks.py  reorganize_labels.py
backend/annotation/migrations/: 0001_initial.py  0002_remove_annotationtask_payment_amount.py  0003_task_priority_difficulty_levels.py  0004_annotationsubmission_source_and_more.py
backend/annotation/proofreading/: __init__.py  interfaces.py  registry.py
backend/annotation/proofreading/adapters/: external_tool.py  inapp.py  neuroglancer.py  placeholder.py
backend/annotation/publishing/: __init__.py  interfaces.py  registry.py
backend/annotation/publishing/adapters/: mitoverse.py  placeholder.py
backend/annotation/quality_control/: __init__.py  interfaces.py  registry.py
backend/annotation/quality_control/adapters/: basic.py  connected_components.py
backend/annotation/tracking/: branching.py  interfaces.py  registry.py  services.py
backend/annotation/tracking/adapters/: local.py  sam2.py  sam2_bridge.py
backend/annotation/visualization/: __init__.py  interfaces.py  registry.py  slice_io.py
backend/annotation/visualization/adapters/: inapp.py  neuroglancer.py  placeholder.py
backend/config/: settings.py  urls.py  views.py
backend/core/: admin_apps.py  admin_common.py  admin_site.py  choices.py  dev_api.py  dev_data.py  labels.py  lifecycle.py  permissions.py  storage.py  test_admin.py  test_lifecycle.py  tests.py  utils.py
backend/payments/: admin.py  api.py  models.py  serializers.py  services.py
backend/payments/migrations/: 0001_initial.py
backend/processing/: admin.py  api.py  apps.py  interfaces.py  models.py  registry.py  serializers.py  services.py  tests.py
backend/processing/adapters/: local.py  slurm.py
backend/processing/migrations/: 0001_initial.py
backend/projects/: admin.py  api.py  models.py  serializers.py  services.py  test_lifecycle_api.py  tests.py
backend/projects/migrations/: 0001_initial.py  0002_project_dataset_project_metadata.py  0003_project_manager_reviewed_project_reviewed_at_and_more.py  0004_project_workflow_type.py  0005_dataset.py
backend/scripts/: seed_demo.py
backend/templates/admin/: manager_index.html
backend/volumes/: admin.py  api.py  models.py  serializers.py  services.py  tests.py
backend/volumes/migrations/: 0001_initial.py  0002_volume_chunk_id_volume_source_volume.py  0003_volume_dataset.py  0004_backfill_datasets.py
(+249 files in other folders)
