[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mito-data-agent"
version = "0.1.0"
description = "LangGraph MVP for MitoVerse upload preparation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-core",
    "pydantic",
    "python-dotenv",
    "numpy",
    "tifffile",
    "pandas",
    "openai",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mito-agent = "mito_data_agent.cli.agent:main"
mito-web = "mito_data_agent.cli.web:main"
mito-clear = "mito_data_agent.cli.clear:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
