[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mito-data-agent"
version = "0.2.0"
description = "Supervisor-based multi-agent LangGraph workflow for MitoVerse metadata"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-core",
    "pydantic",
    "python-dotenv",
    "numpy",
    "tifffile",
    "pandas",
    "openai",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
mito-clear = "mito_data_agent.cli.clear:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
