[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mito-data-agent"
version = "0.3.0"
description = "Django web app for managing mitochondria annotation projects, tasks, review, and payment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<5.2",
    "python-dotenv",
    "numpy",
    "tifffile",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-django"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
